linking DO with GH

--- a/config/database.yml
+++ b/config/database.yml
@@ -25,4 +25,8 @@ test:
 
 production:
   <<: *default
-  database: cloud_city_development
+  database: digitaloceantesting
+  username: digitaloceantesting
+  url: <%= ENV["DATABASE_URL"] %>
+  host: localhost
+
